--- a/ActivateSprinklers/ActivateSprinklers.csproj
+++ b/ActivateSprinklers/ActivateSprinklers.csproj
@@ -9,16 +9,14 @@
         <EnableHarmony>false</EnableHarmony>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <ModZipPath>$(SolutionDir)\_releases</ModZipPath>
-        <IgnoreModFilePatters>\.png$</IgnoreModFilePatters>
+        <IgnoreModFilePatterns>\.png$</IgnoreModFilePatterns>
         <EnableModDeploy>false</EnableModDeploy>
         <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
         <LangVersion>9</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1"/>
+        <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.0.1"/>
     </ItemGroup>
     <Import Project="..\Common\Common.projitems" Label="Shared"/>
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Exec Command="python &quot;$(ProjectDir)build.py&quot; &quot;$(GameModsPath)/$(ProjectName)/#SPLIT#$(TargetDir)#SPLIT#$(ProjectDir)\&quot; &quot;$(ConfigurationName)&quot;"/>
-    </Target>
 </Project>
