--- a/ActivateSprinklers/manifest.json
+++ b/ActivateSprinklers/manifest.json
@@ -1,21 +1,17 @@
 ﻿{
   "Name": "Activate Sprinklers",
   "Author": "f4iTh",
-  "Version": "1.3.0",
+  "Version": "1.4.0-dev",
   "UniqueID": "f4iTh.ActivateSprinklers",
   "Description": "Activate sprinklers by right clicking them.",
   "EntryDll": "ActivateSprinklers.dll",
-  "MinimumApiVersion": "3.0.0",
+  "MinimumApiVersion": "3.14.0",
   "UpdateKeys": [
     "Nexus:2088"
   ],
   "Dependencies": [
     {
       "UniqueID": "Speeder.BetterSprinklers",
-      "IsRequired": false
-    },
-    {
-      "UniqueID": "hootless.LineSprinklers",
       "IsRequired": false
     },
     {
