--- a/AdjustBabyChance/AdjustBabyChance.csproj
+++ b/AdjustBabyChance/AdjustBabyChance.csproj
@@ -4,14 +4,17 @@
         <RootNamespace>AdjustBabyChance</RootNamespace>
         <Version>1.0.0</Version>
         <TargetFramework>net5.0</TargetFramework>
-        <Platforms>x86</Platforms>
-        <PlatformTarget>x86</PlatformTarget>
+        <Platforms>AnyCPU</Platforms>
+        <PlatformTarget>AnyCPU</PlatformTarget>
         <EnableHarmony>true</EnableHarmony>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <ModZipPath>$(SolutionDir)\_releases</ModZipPath>
         <LangVersion>9</LangVersion>
+        <Configurations>Debug;Release</Configurations>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1"/>
+        <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.0.1"/>
     </ItemGroup>
+    <Import Project="..\Common\Common.projitems" Label="Shared"/>
 </Project>
