--- a/WheresMyItems/WheresMyItems.csproj
+++ b/WheresMyItems/WheresMyItems.csproj
@@ -4,8 +4,8 @@
         <RootNamespace>WheresMyItems</RootNamespace>
         <Version>1.0.0</Version>
         <TargetFramework>net5.0</TargetFramework>
-        <Platforms>x86;AnyCPU</Platforms>
-        <PlatformTarget>x86</PlatformTarget>
+        <Platforms>AnyCPU</Platforms>
+        <PlatformTarget>AnyCPU</PlatformTarget>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <ModZipPath>$(SolutionDir)\_releases</ModZipPath>
         <LangVersion>9</LangVersion>
