--- a/ShowCatchQuality/manifest.json
+++ b/ShowCatchQuality/manifest.json
@@ -1,11 +1,11 @@
 ﻿{
   "Name": "Show Catch Quality",
   "Author": "f4iTh",
-  "Version": "1.0.4",
+  "Version": "1.1.0-dev",
   "Description": "Shows the quality of the fish in the speech bubble after catching a fish.",
   "UniqueID": "f4iTh.ShowCatchQuality",
   "EntryDll": "ShowCatchQuality.dll",
-  "MinimumApiVersion": "3.0.0",
+  "MinimumApiVersion": "3.14.0",
   "UpdateKeys": [
     "Nexus:3326"
   ]
