--- a/WheresMyItems/WheresMyItems.csproj
+++ b/WheresMyItems/WheresMyItems.csproj
@@ -12,6 +12,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1"/>
+        <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.0.1"/>
     </ItemGroup>
     <Import Project="..\Common\Common.projitems" Label="Shared"/>
 </Project>
