--- a/WheresMyItems/manifest.json
+++ b/WheresMyItems/manifest.json
@@ -1,21 +1,17 @@
 {
   "Name": "Where's My Items?",
   "Author": "f4iTh",
-  "Version": "1.1.3",
+  "Version": "1.2.0-dev",
   "UniqueID": "f4iTh.WheresMyItems",
   "Description": "Helps you find the items you're seeking for.",
   "EntryDll": "WheresMyItems.dll",
-  "MinimumApiVersion": "3.0.0",
+  "MinimumApiVersion": "3.14.0",
   "UpdateKeys": [
     "Nexus:2086"
   ],
   "Dependencies": [
     {
       "UniqueID": "spacechase0.GenericModConfigMenu",
-      "IsRequired": false
-    },
-    {
-      "UniqueID": "spacechase0.JsonAssets",
       "IsRequired": false
     }
   ]
