--- a/ParsnipsAbsolutelyEverywhereButItsGarlic/ParsnipsAbsolutelyEverywhereButItsGarlic.csproj
+++ b/ParsnipsAbsolutelyEverywhereButItsGarlic/ParsnipsAbsolutelyEverywhereButItsGarlic.csproj
@@ -3,12 +3,12 @@
         <AssemblyName>ParsnipsAbsolutelyEverywhereButItsGarlic</AssemblyName>
         <RootNamespace>ParsnipsAbsolutelyEverywhereButItsGarlic</RootNamespace>
         <Version>1.0.0</Version>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Platforms>AnyCPU</Platforms>
         <PlatformTarget>AnyCPU</PlatformTarget>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <ModZipPath>$(SolutionDir)releases\ParsnipsAbsolutelyEverywhereButItsGarlic</ModZipPath>
-        <LangVersion>9</LangVersion>
+        <LangVersion>latestmajor</LangVersion>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1"/>
